Various fixes for recent avada update (#9)
* fix: decrease margin size to 0 for .single #content on mobile

Fixes the overlap for "previous" and "next" buttons.

Closes #4

* fix: change blockquote border-left color to primary

Closes #5

* fix: Adjust heading styles + make tables scroll horizontally on mobile

Closes #6

* fix: better uniformity for gray colors ($tertiary) + assorted fixes

Closes #7

* fix: include Open Sans 600 weight + adjust headings

Closes #8

--- a/aliem/styles/collections/avada.styl
+++ b/aliem/styles/collections/avada.styl
@@ -1,4 +1,8 @@
 // @stylint off
+
+.bbp-pagination .bbp-pagination-links a.inactive:hover, .page-links a:hover, .pagination a.inactive:hover, .woocommerce-pagination .page-numbers:hover
+    border: 1px solid $primary
+
 .fusion-accordian .panel-title a:hover .fa-fusion-box
     background-color: $primary
     border-color: $primary
@@ -121,8 +125,7 @@
 .full-boxed-pricing.fusion-pricing-table .panel-heading h3
     color: $font-primary
 
-#main .post h2 a, .about-author .title a, .fusion-content-widget-area .widget .recentcomments, .fusion-content-widget-area .widget li a, .fusion-content-widget-area .widget_categories li, .fusion-load-more-button, .fusion-rollover a, .project-content .project-info .project-info-box a, .shop_attributes tr th, .single-navigation a[rel='next']:after, .single-navigation a[rel='prev']:before, body a, body a:after, body a:before
-    color: $primary
+
 
 body #toTop:before
     color: white
