--- a/aliem/styles/collections/sidebar.styl
+++ b/aliem/styles/collections/sidebar.styl
@@ -74,3 +74,5 @@
     .wysija-input
         &:focus
             outline-color: lighten($primary, 5)
+    .fusion-tabs-widget .tab-holder .tabs li a
+        color: $font-primary
